[+] Added skeleton for pages and cards
Added skelton loading for pages and cards using materialUI (mui). Singular pages yet to do. Partial work.

--- a/frontend/src/components/MainPanel/components/Card/Card.css
+++ b/frontend/src/components/MainPanel/components/Card/Card.css
@@ -58,3 +58,12 @@
     font-size: large;
     font-weight: 600;
 }
+
+.album-image img {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.album-image img.loaded {
+  opacity: 1;
+}
