[+] Implemented playlist handler
Issue #6

--- a/frontend/src/components/PlayFooter/PlayFooter.css
+++ b/frontend/src/components/PlayFooter/PlayFooter.css
@@ -72,12 +72,13 @@
   align-items: center;
 }
 
-.duration {
+.playbar .duration {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .playbar svg {
   padding: 5px;
 }
